# ultrack

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  NOTES  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: docs.yml  test_pull_request.yml
.napari-hub/: DESCRIPTION.md
benchmarks/: README.md  asv.conf.json  get_profile_results.py
benchmarks/benchmarks/: benchmark_solver.py  benchmarks.py
docker/: README.rst  build_containers.py
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docs/: README.md
docs/source/: api.rst  appearances.rst  cli.rst  conf.py  configuration.rst  examples.rst  faq.rst  fiji.rst  getting_started.rst  index.rst  install.rst  napari.rst  optimizing.rst  plugin.rst  quickstart.rst  rest_api.rst  theory.rst
examples/: README.md  README.rst  gurobi_mip_benchmark.py  node_features.py  refresh_examples.sh
examples/api/: api_example.ipynb  environment_cpu.yml  environment_gpu.yml
examples/docker/: README.md
examples/docker/cpu/: Dockerfile
examples/docker/gpu/: Dockerfile
examples/flow_field_3d/: environment_cpu.yml  environment_gpu.yml
examples/micro_sam/: environment_cpu.yml  environment_gpu.yml  micro_sam_tracking.ipynb
examples/multi_color_ensemble/: environment_cpu.yml  environment_gpu.yml
examples/neuromast_plantseg/: environment_cpu.yml  environment_gpu.yml
examples/stardist_2d/: environment-cpu-py3.9-tf.yml  environment-gpu-py3.9-tf.yml  environment_cpu.yml  environment_gpu.yml
examples/zebrahub/: config.toml  environment_cpu.yml  environment_gpu.yml  zebrahub.ipynb
tests/: test_ultrack.py
tests/config/: test_config.py
ultrack/: __init__.py  conftest.py  napari.yaml
ultrack/analysis/: __init__.py  plot.py  tracks.py  utils.py
ultrack/analysis/_test/: test_analysis_plot.py  test_analysis_tracks.py  test_analysis_utils.py
ultrack/api/: __init__.py  app.py  database.py  main.py  settings.py
ultrack/api/_test/: test_api.py
ultrack/api/utils/: api.py  fs.py  zarr.py
ultrack/cli/: check_gurobi.py  clear_database.py  compute.py  config.py  data_summary.py  estimate_params.py  export.py  flow.py  initialize.py  labels_to_edges.py  link.py  main.py  match_gt.py  predict.py  segment.py  server.py  shift.py  solve.py  track.py  trackmate.py  utils.py  view.py
ultrack/cli/_test/: test_cli.py  test_trackmate_cli.py
ultrack/config/: README.md  __init__.py  config.py  dataconfig.py  segmentationconfig.py  trackingconfig.py
ultrack/config/_test/: test_config.py
ultrack/core/: README.md  autotune.py  database.py  dbbase.py  gt_matching.py  interactive.py  main.py  match_gt.py  tracker.py
ultrack/core/_test/: test_database.py  test_gt_matching.py  test_interactive.py  test_main.py  test_tracker.py
ultrack/core/compute/: __init__.py
ultrack/core/export/: __init__.py  ctc.py  exporter.py  geff.py  networkx.py  trackmate.py  tracks_layer.py  utils.py  zarr.py
ultrack/core/initialize/: __init__.py  dbbase.py  processing.py  utils.py
ultrack/core/linking/: __init__.py  features.py  processing.py  utils.py
ultrack/core/segmentation/: __init__.py  dbbase.py  hierarchy.py  node.py  processing.py  utils.py
ultrack/core/solve/: processing.py  sqlgtmatcher.py  sqltracking.py
ultrack/core/tracking/: gurobi_solver.py  processing.py  sqltracking.py
ultrack/imgproc/: __init__.py  flow.py  intensity.py  measure.py  plantseg.py  register.py  sam.py  segmentation.py  utils.py
ultrack/imgproc/_test/: test_flow.py  test_intensity.py  test_measure.py  test_plantseg.py  test_register.py  test_sam.py  test_segmentation.py  test_utils.py
ultrack/ml/: classification.py
ultrack/reader/: napari_reader.py
ultrack/reader/_test/: test_napari_reader.py
ultrack/tracks/: __init__.py  gap_closing.py  graph.py  sorting.py  stats.py  video.py
ultrack/tracks/_test/: test_gap_closing.py  test_tracks_gap_closing.py  test_tracks_graph.py  test_tracks_sorting.py  test_tracks_stats.py  test_tracks_video.py
ultrack/utils/: __init__.py  array.py  constants.py  cuda.py  data.py  edge.py  estimation.py  flow.py  multiprocessing.py  napari.py  segmentation.py  shift.py  test_utils.py  tiling.py  tracks.py  ultrackArray.py  ultrack_array.py
ultrack/utils/_test/: test_edge.py  test_estimation.py  test_shift.py  (+4 more)
ultrack/validation/: link_validation.py
ultrack/widgets/: __init__.py  _generic_annotation_widget.py  _generic_data_widget.py  baseconfigwidget.py  computewidget.py  datawidget.py  division_annotation_widget.py  hierarchy_viz_widget.py  hypotheses_viz_widget.py  initwidget.py  labels_to_edges_widget.py  linkingwidget.py  mainconfigwidget.py  node_annotation_widget.py  segm_vis_widget.py  segmentationwidget.py  track_inspection_widget.py  trackingwidget.py  ultrackwidget.py  utils.py
ultrackBeehive/: __init__.py
ultrackBeehive/api/: __init__.py  app.py  main.py  settings.py
ultrackBeehive/cli/: clear_database.py  config.py  data_summary.py  estimate_params.py  export.py  flow.py  labels_to_edges.py  link.py  main.py  match_gt.py  predict.py  segment.py  server.py  solve.py  utils.py  view.py
ultrackBeehive/config/: __init__.py  config.py  segmentationconfig.py  trackingconfig.py
ultrackBeehive/core/: README.md  database.py  interactive.py  main.py  match_gt.py  tracker.py
ultrackBeehive/imgproc/: __init__.py  flow.py  intensity.py  measure.py  plantseg.py  register.py  sam.py  segmentation.py  utils.py
ultrackBeehive/ml/: classification.py
ultrackBeehive/reader/: napari_reader.py
ultrackBeehive/tracks/: __init__.py  gap_closing.py  graph.py  sorting.py  stats.py  video.py
ultrackBeehive/utils/: __init__.py  constants.py  cuda.py  deprecation.py  edge.py  estimation.py  multiprocessing.py  printing.py  segmentation.py  test_utils.py  ultrack_array.py
ultrackBeehive/validation/: link_validation.py
ultrackBeehive/widgets/: __init__.py  _generic_annotation_widget.py  _generic_data_widget.py  division_annotation_widget.py  hierarchy_viz_widget.py  hypotheses_viz_widget.py  labels_to_edges_widget.py  node_annotation_widget.py  track_inspection_widget.py
(+160 files in other folders)
