[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultrack"
dynamic = ["version"]
description = "Large-scale multi-hypotheses cell tracking"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" },
]
dependencies = [
    "blosc2 >=2.2.0",
    "click >=8.1.3",
    "cloudpickle >=3.0.0",
    "edt >=2.3.2",
    "fastapi >= 0.109.2",
    "gurobipy >=9.0.0, !=12.0.0",
    "higra >= 0.6.10",
    "httpx >= 0.26.0",
    "imagecodecs >=2023.3.16",
    "imageio >=2.28.0",
    "magicgui >=0.7.2",
    "mip >=1.16rc0",
    "napari >=0.4.18",
    "numba >=0.57.0",
    "numcodecs <0.16.0",  # required by zarr<3  https://github.com/zarr-developers/zarr-python/issues/2963
    "ome-zarr >= 0.9.0",
    "pandas >=2.0.1",
    "pillow >=10.0.0",
    "psycopg2-binary >=2.9.6",
    "psygnal >=0.9.0",
    "pyarrow >=16.1.0,<20",
    "pydantic >=2",
    "pydantic-settings",
    "pydot >=2.0.0",
    "qtawesome >=1.3.1",
    "qtpy",
    "rich >=13.3.5",
    "scikit-image >=0.21.0",
    "seaborn >=0.13.0",
    "SQLAlchemy >=2.0.0",
    "toml >=0.10.2",
    "torch >=2.0.1",
    "urllib3",
    "uvicorn >=0.27.0.post1",
    "websocket >=0.2.1",
    "websockets >=12.0",
    "zarr >=2.15.0,<3.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx == 6.2.1",
    "autodoc_pydantic",
    "furo",
    "myst-parser >= 2.0.0",
    "nbsphinx >= 0.9.3",
    "sphinx-click >=5.0.1,<6.0.0",
    "sphinx-copybutton",
    "sphinx-gallery == 0.15.0",
    "sphinxcontrib-applehelp == 1.0.8",
]
test = [
    "asv >=0.5.1",
    "pre-commit >=3.2.2",
    "pytest >=7.3.1",
    "pytest-qt >=4.2.0",
    "pytrackmate >=1.3.4",
    "napari[testing] >0.4.18",
    "pyqt5 >=5.15.4",
]
ml = [
    "catboost >=1.2.7,<1.3",
    "scikit-learn >=1.6.0,<1.7",
]

[project.scripts]
ultrack = "ultrack.cli.main:main"

[project.entry-points."napari.manifest"]
ultrack = "ultrack:napari.yaml"

# pixi config
[tool.pixi.project]
channels = ["conda-forge", "nvidia", "pytorch", "numba", "gurobi"]
platforms = ["linux-64", "win-64", "osx-64"]
preview = ["pixi-build"]  # required to use git links

[tool.pixi.dependencies]
click = ">=8.1.3"
cloudpickle = ">=3.0.0"
edt = ">=2.3.2"
fastapi = ">=0.109.2"
gurobi = ">=9.0.0, !=12.0.0"
higra = ">=0.6.10"
httpx = ">=0.26.0"
imagecodecs = ">=2023.3.16"
imageio = ">=2.28.0"
magicgui = ">=0.7.2"
napari = ">=0.4.18"
numba = {version = ">=0.57.0", channel = "numba"}
llvmlite = {version = ">=0.44.0", channel = "numba"}
ome-zarr = ">=0.9"
pandas = ">=2.0.1"
pillow = ">=10.0.0"
psycopg2-binary = ">=2.9.6"
psygnal = ">=0.9.0"
pydantic = ">=2"
pydantic-settings = "*"
pydot = ">=2.0.0"
qtawesome = ">=1.3.1"
qtpy = "*"
rich = ">=13.3.5"
scikit-image = ">=0.21.0"
seaborn = ">=0.13.0"
SQLAlchemy = ">=2.0.0"
toml = ">=0.10.2"
pytorch = {version = ">=2.0.1", channel = "pytorch"}
urllib3 = "*"
uvicorn = ">=0.27.0.post1"
websocket = ">=0.2.1"
websockets = ">=12.0"
zarr = ">=2.15.0,<3.0.0"
scikit-learn = ">=1.6.0,<1.7"
catboost = ">=1.2.7,<1.3"
pyarrow = ">=16.1.0,<20"

[tool.pixi.feature.cuda]
channels = ["conda-forge", "rapidsai"]
platforms = ["linux-64"] # TODO: waiting for cucim to be available for windows , "win-64"]

[tool.pixi.feature.cuda.dependencies]
cupy = "*"
cucim = "*"
pytorch-cuda = "*"

[tool.pixi.feature.cuda.system-requirements]
cuda = "12"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
asv = ">=0.6.4,<0.7"
pre-commit = ">=4.1.0,<5"
pytest-qt = ">=4.4.0,<5"
pyqt = ">=5.15.9,<6"
pytest-cov = ">=6.0.0,<7"

[tool.pixi.feature.ml.dependencies]
catboost = ">=1.2.7,<1.3"
scikit-learn = ">=1.6.0,<1.7"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.pixi.pypi-dependencies]
ultrack = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
cuda = { features = ["cuda"] }
# docs = { features = ["docs"]}  # Current dependencies aren't compatible with pixi
ml = { features = ["ml"], solve-group = "default" }
test = { features = ["test", "ml"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest -v --color=yes --cov=ultrack --cov-report=html --durations=15 ."

# Hatch config
[tool.hatch.version]
path = "ultrack/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = [
    "/ultrack",
]

[tool.hatch.metadata]
allow-direct-references = true

# TODO:
# - add `docs` feature to `pixi` config
