[metadata]
name = ultrack
version = 0.3.2
author = Jordao Bragantini
author_email = jordao.bragantini@czbiohub.org
description = Large-scale multi-hypotheses cell tracking
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
python_requires = >=3.9,<3.12
install_requires =
    click >=8.1.3,<9.0
    rich >=13.3.5,<14.0
    magicgui >=0.7.2,<0.8.0
    toml >=0.10.2,<0.11.0
    pydantic >=1.10.7,<2.0.0
    higra >=0.6.6,<0.7.0
    zarr >=2.15.0,<3.0.0
    napari >=0.4.17,<0.5.0
    pillow >=10.0.0,<11.0.0
    numba >=0.57.0,<0.58.0
    SQLAlchemy >=1.4.40,<2.0.0
    seaborn >=0.13.0,<0.14.0
    imagecodecs >=2023.3.16,<2024.0.0
    scikit-image >=0.21.0,<0.22.0
    blosc2 >=2.2.0,<3.0.0
    imageio >=2.28.0,<2.29.0
    psycopg2-binary >=2.9.6,<3.0.0
    cloudpickle >=3.0.0,<4.0.0
    psygnal >=0.9.0,<1.0.0
    pandas >=2.0.1,<2.2
    mip >=1.15.0,<2.0.0
    torch >=2.0.1,<3.0.0
    gurobipy >=9.0.0

[options.extras_require]
testing =
    pytest >=7.3.1,<8.0.0
    pre-commit >=3.2.2,<4.0.0
    pytest-qt >=4.2.0,<5.0.0
    asv >=0.5.1,<0.6.0
    testing.postgresql >=1.3.0,<2.0.0
    # git+https://github.com/hadim/pytrackmate.git  NOT WORKING WITH setup.cfg

docs =
    sphinxcontrib-applehelp ==1.0.4
    sphinx-rtd-theme >=1.3.0,<2.0.0
    sphinx-click >=5.0.1,<6.0.0

[options.entry_points]
console_scripts =
    ultrack = ultrack.cli.main:main
napari.manifest =
    ultrack = ultrack:napari.yaml
